[gd_scene load_steps=5 format=2]

[ext_resource path="res://mapeditor/MapEditor.gd" type="Script" id=1]
[ext_resource path="res://camera/MainCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://misc/SelectUnitsMarker.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.2, 0.2, 0.243137 )

[node name="MapEditor" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="Panel" parent="CanvasLayer/GUI/HBoxContainer"]
margin_right = 170.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/HBoxContainer/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_right = 170.0
margin_bottom = 14.0
text = "Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightSpinBox" type="SpinBox" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 46.0
margin_right = 170.0
margin_bottom = 60.0
text = "Tileset selection"

[node name="TilesetPreviewButton" type="TextureButton" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 64.0
margin_right = 170.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 68.0
margin_right = 170.0
margin_bottom = 82.0
text = "Current Selection"

[node name="TilePreview" type="TextureButton" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 86.0
margin_right = 170.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 90.0
margin_right = 170.0
margin_bottom = 104.0
text = "Tile selection"

[node name="TilePreivewGrid" type="GridContainer" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 108.0
margin_right = 170.0
margin_bottom = 108.0

[node name="CreateMap" type="Button" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 112.0
margin_right = 170.0
margin_bottom = 132.0
text = "Create Map"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer"]
margin_top = 136.0
margin_right = 170.0
margin_bottom = 160.0

[node name="MapWidth" type="SpinBox" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer/HBoxContainer"]
margin_right = 83.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 50.0
max_value = 1000.0
value = 250.0

[node name="MapHeight" type="SpinBox" parent="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 170.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 50.0
max_value = 1000.0
value = 250.0

[node name="Main" type="Control" parent="CanvasLayer/GUI/HBoxContainer"]
margin_left = 174.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 607.653, 315.742 )

[node name="MapBoundaryIso" type="Polygon2D" parent="."]
visible = false
invert_border = 97.8

[node name="MapBoundaryRect" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 0.74902, 0, 0.247059 )

[node name="SelectUnitsMarker" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="CanvasLayer/GUI/HBoxContainer/Sidebar/VBoxContainer/CreateMap" to="." method="_on_CreateMap_pressed"]
